--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,1 +1,1 @@
-{ "version": 2, "builds": [{"src": "./app.js", "use": "@vercel/node"}], "routes": [{ "source": "/(.*)", "destination": "/api" }] }
+{ "version": 2, "builds": [{"src": "./app.js", "use": "@vercel/node"}], "rewrite": [{ "source": "/(.*)", "destination": "/api" }] }
