--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,1 +1,15 @@
-{ "version": 2, "builds": [{"src": "./app.js", "use": "@vercel/node"}], "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
+{
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/app.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "api/app.js"
+    }
+  ]
+}
